# poc-basic-player

./: BUILD.md  CMakeLists.txt  LICENSE  README.md  conanfile.py  conanfile.txt  netilify_build.sh  netlify.toml  netlify_build.sh  requirements.txt
src/: edit_model.cpp  main.cpp
src/web/: index.html
